added p tags to html

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,17 @@
 <body>
     <h1>What to Watch??</h1>
     <h2>"Don't know what to watch? We are here to help"</h2>
+    <h3>Movie Title:</h3>
+    <p id="title"></p>
+    <p>Year:</p>
+    <p id="year"></p>
+    <p>Rating:</p>
+    <p id="rated"></p>
+    <p>Awards:</p>
+    <p id="awards"></p>
+    <p>Description:</p>
+    <p id="plot"></p>
+
     <nav>
 
       <label for ="touch"><span>Select Streaming Service</span></label>               
