linking data from API to HTML

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "CSS/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script defer src="JS/script.js"></script> 
     <title>What to watch App</title>
 </head>
@@ -13,15 +13,12 @@
     <h1>What to Watch??</h1>
     <h2>"Don't know what to watch? We are here to help"</h2>
     <h3>Movie Title:</h3>
-    <p id="title"></p>
-    <p>Year:</p>
-    <p id="year"></p>
-    <p>Rating:</p>
-    <p id="rated"></p>
-    <p>Awards:</p>
-    <p id="awards"></p>
-    <p>Description:</p>
-    <p id="plot"></p>
+    <p id="name"></p>
+    <p>StreamingService:</p>
+    <p id="streaming-service"></p>
+    <p>IMDB PAGE:</p>
+    <a id="imdb">IMDB Link</a>
+ 
 
     <nav>
 
